# Gobelin

./: Cargo.toml  README.md
.github/workflows/: cd.yml  vscode-ext.yml
gobelin/: Cargo.toml
gobelin-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
gobelin-vscode/src/: extension.ts
gobelin/src/: gobelin_opt.rs  main.rs
gobelin/src/command/: mod.rs
gobelin/src/command/add/month/: add_month_file.rs  mod.rs
gobelin/src/command/fmt/: format_files.rs  mod.rs
gobelin/src/command/init/: init_directory.rs  mod.rs
gobelin/src/command/update/: mod.rs  update_all.rs
gobelin/src/config/: gobelin_toml_parser.rs  mod.rs
libgobelin/: Cargo.toml
libgobelin/src/: exact_float.rs  lib.rs  unicode_gauge.rs
libgobelin/src/create_month_file/: create_month_file.rs  mod.rs
libgobelin/src/format_gobelin_file/: format_balance.rs  format_balance_by_category.rs  format_gobelin_file.rs  format_month.rs  format_transactions.rs  mod.rs
libgobelin/src/init_gobelin_directory/: init_gobelin_directory.rs  mod.rs
libgobelin/src/models/: balance.rs  config.rs  gobelin_file.rs  locale.rs  mod.rs  transaction.rs
libgobelin/src/parse_gobelin_file/: compute_tags.rs  mod.rs  parse_balance.rs  parse_balance_by_category.rs  parse_gobelin_file.rs  (+2 more)
libgobelin/tests/: create_month_file_tests.rs  exact_float_tests.rs  format_gobelin_file_tests.rs  init_gobelin_directory_tests.rs  parse_and_format_tests.rs  parse_gobelin_file_tests.rs  transaction_tests.rs  unicode_gauge_tests.rs  update_all_files_tests.rs
sample/: gobelin.toml
sample/2021/: 11.gobelin  12.gobelin
(+2 files in other folders)
