[package]
name = "gobelin"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
libgobelin = { path = "../libgobelin" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5"